--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
   "name": "react-welcome",
-  "version": "0.0.1",
-  "description": "React welcome animation",
-  "main": "main.js",
+  "version": "0.1.0",
+  "main": "lib/ReactWelcome.tsx",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.0",
+    "typescript": "~3.7.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/icastillejogomez/react-welcome.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "keywords": [
-    "react",
-    "welcome"
-  ],
-  "author": "Ignacio Castillejo Gómez",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/icastillejogomez/react-welcome/issues"
-  },
-  "homepage": "https://github.com/icastillejogomez/react-welcome#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
