--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-welcome",
-  "version": "0.1.0",
-  "main": "lib/ReactWelcome.tsx",
-  "private": true,
+  "version": "0.1.1",
+  "main": "dist/bundle.js",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,13 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-jsx": "^2.2.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
-
+    "build": "webpack --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +33,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
