--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "react-welcome",
-  "version": "0.1.4",
+  "version": "0.2.7",
   "main": "dist/bundle.js",
   "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -19,23 +16,8 @@
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
+    "styled-jsx": "^3.2.5",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.42.0",
